Closed Bug 1349618 Opened 7 years ago Closed 7 years ago

dom/base/nsJSUtils.h:72:14: error: 'SamplerStackFrameRAII' in namespace 'mozilla' does not name a type

Categories

(Core :: General, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: jbeich, Assigned: nbp)

References

Details

(Keywords: regression)

Attachments

(1 file)

GeckoProfiler isn't available on most Tier3 platforms: iOS, Android aarch64, Linux powerpc*/sparc64, BSDs, Solaris, etc.

In file included from objdir/dom/xslt/xpath/Unified_cpp_dom_xslt_xpath0.cpp:2:
In file included from dom/xslt/xpath/XPathEvaluator.cpp:24:
In file included from objdir/dist/include/mozilla/dom/BindingUtils.h:36:
objdir/dist/include/nsJSUtils.h:72:14: error: no type named 'SamplerStackFrameRAII' in
      namespace 'mozilla'
    mozilla::SamplerStackFrameRAII mSamplerRAII;
    ~~~~~~~~~^
1 error generated.
Assignee: nobody → nicolas.b.pierron
Status: NEW → ASSIGNED
This patch does exactly what the title say.
This fix an issue introduced in Bug 1331662.
Attachment #8850085 - Flags: review?(n.nethercote)
Comment on attachment 8850085 [details] [diff] [review]
Guard ExecutionContext::mSamplerRAII with the MOZ_GECKO_PROFILER macro.

I confirm, the patch is enough to unbreak build on FreeBSD.
Attachment #8850085 - Flags: feedback+
Comment on attachment 8850085 [details] [diff] [review]
Guard ExecutionContext::mSamplerRAII with the MOZ_GECKO_PROFILER macro.

Review of attachment 8850085 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/base/nsJSUtils.cpp
@@ +138,5 @@
>    : mSamplerRAII("nsJSUtils::ExecutionContext", /* PROFILER_LABEL */
>                   js::ProfileEntry::Category::JS, __LINE__)
>    , mCx(aCx)
> +#else
> +  : mCx(aCx)

You can avoid the duplication of |mCx(aCx)| like so:

>  :
> #ifdef MOZ_GECKO_PROFILER
>    mSamplerRAII(...),
> #endif
>    mCx(aCx)
>  , mCompartment(...)

r=me with that. Thanks!
Attachment #8850085 - Flags: review?(n.nethercote) → review+
Pushed by npierron@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7dee6ff041fe
Guard ExecutionContext::mSamplerRAII with the MOZ_GECKO_PROFILER macro. r=njn
https://hg.mozilla.org/mozilla-central/rev/7dee6ff041fe
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: